--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Prabhat jain</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,16 +13,16 @@
 
 <body>
   <div class="top">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
     <h1>I'm Prabhat.</h1>
     <h2>a <span class="soft">software</span> developer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
+    <img src="/images/mountain.png" alt="mountain-img">
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="man" src="images/man.png" alt="man-profile" height="100px" width="100px">
+      <img class="man" src="/images/man.png" alt="man-profile" height="100px" width="100px">
       <h2>Hello.</h2>
       <p class="intro">I am a software developer.I like to do coding.I love tea☕</p>
     </div>
@@ -30,12 +30,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="programming" src="images/programming_lang.webp" alt="programming-img" height="200px" width="500px">
+        <img class="programming" src="/images/programming_lang.webp" alt="programming-img" height="200px" width="500px">
         <h3>programming languages</h3>
         <p>I have knowledge of many programming languages like C,C++,JAVA,PYTHON etc.I can code in any language.</p>
       </div>
       <div class="skill-row">
-        <img class="development" src="images/development.jpg" alt="development-img" height="200px" width="500px">
+        <img class="development" src="/images/development.jpg" alt="development-img" height="200px" width="500px">
         <h3>Development</h3>
         <p>I know how to use programming languages for real life problems and I have build many projects.I have sound knowledge of data structure and algorithms. </p>
       </div>
